tests/semantica/invalid/asignacion/test1.ctds
program
	{
		
		void main(){
			x = true;
		}
	}